--- a/START.adoc
+++ b/START.adoc
@@ -14,6 +14,7 @@ npm -v # <6>
 sudo npm install -g angular-cli # <7>
 ng -v # <8>
 npm install primeng --save # <9>
+npm install @angular/animations --save
 ----
 <2> Install node.js
 <2> Install the latest _stable_ version
