--- a/START.adoc
+++ b/START.adoc
@@ -15,6 +15,7 @@ sudo npm install -g angular-cli # <7>
 ng -v # <8>
 npm install primeng --save # <9>
 npm install @angular/animations --save
+npm install npm install intl --save <10>
 ----
 <2> Install node.js
 <2> Install the latest _stable_ version
@@ -23,6 +24,7 @@ npm install @angular/animations --save
 <7> Install angular-cli
 <8> Verify the version
 <9> Install primeng (in ./web folder)
+<10> Pipe issue on iPad
 
 ----
 npm install font-awesome --save
