Dynamic Api Root

--- a/START.adoc
+++ b/START.adoc
@@ -40,6 +40,12 @@ Run
 ng serve --host 192.168.0.178 --port 4200
 
 ----
+
+???
+ng build -prod -bh /app/
+
+
+----
 Run build
 
 npm install http-server -g
